crates/nash-report/tests/can/snapshots/can__types__tests__type_var_application.snap
---
source: crates/nash-can/src/types.rs
description: "'f 'a"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: App {
        head: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 3,
                },
            },
            value: Var(
                "f",
            ),
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 4,
                    },
                    end: Position {
                        line: 1,
                        column: 6,
                    },
                },
                value: Var(
                    "a",
                ),
            },
        ],
    },
}
